--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         "type": "Shape3DLoader",
         "args": {
             "data_dir": "./data/",
-            "metadata": "metadata.csv",
+            "metadata": "./data/metadata.csv",
             "point_limit": [
                 2000,
                 9000,
@@ -29,7 +29,7 @@
         "type": "Shape3DLoader",
         "args": {
             "data_dir": "./data/",
-            "metadata": "metadata.csv",
+            "metadata": "./data/metadata.csv",
             "point_limit": [
                 2000,
                 9000,
@@ -45,7 +45,7 @@
         "type": "Shape3DLoader",
         "args": {
             "data_dir": "./data/",
-            "metadata": "metadata.csv",
+            "metadata": "./data/metadata.csv",
             "point_limit": [2000, 9000, 1000],
             "batch_size": 1,
             "shuffle": false,
