--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.20.3
 open3d==0.12.0
 torch==1.7.1
-PyMCubes==0.1.2
 Pillow==8.3.1
+torchmcubes @ git+https://github.com/tatsy/torchmcubes.git@3aef8afa5f21b113afc4f4ea148baee850cbd472
